<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_main"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_dark"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_module"
            android:icon="@drawable/ic_module_dark"
            android:title="@string/menu_module" />
        <item
            android:id="@+id/nav_article"
            android:icon="@drawable/ic_article_dark"
            android:title="@string/menu_article" />
    </group>
    <group
        android:id="@+id/menu_secondary"
        android:checkableBehavior="all">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_dark"
            android:title="@string/menu_settings" />
    </group>
</menu>