<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    tools:context=".ui.appinfo.AppInfoActivity">

    <ImageView
        android:id="@+id/iv_app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arsim_logo_light_main"
        android:contentDescription="@string/app_name" />

    <TextView
        style="@style/TextAppInfo.AppName"
        android:id="@+id/tv_app_name"
        android:layout_marginBottom="8dp"
        android:text="@string/app_name"
        app:layout_constraintBottom_toTopOf="@+id/tv_app_version"
        app:layout_constraintEnd_toEndOf="@+id/tv_app_version"
        app:layout_constraintStart_toStartOf="@+id/tv_app_version" />

    <TextView
        style="@style/TextAppInfo.AppVersionCopyright"
        android:id="@+id/tv_app_version"
        android:layout_marginBottom="16dp"
        android:text="@string/app_version_text"
        app:layout_constraintBottom_toTopOf="@+id/iv_app_logo"
        app:layout_constraintEnd_toEndOf="@+id/iv_app_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_app_logo" />

    <TextView
        style="@style/TextAppInfo.AppVersionCopyright"
        android:id="@+id/tv_app_copyright"
        android:layout_marginTop="16dp"
        android:text="@string/app_copyright_text"
        app:layout_constraintEnd_toEndOf="@+id/iv_app_logo"
        app:layout_constraintStart_toStartOf="@+id/iv_app_logo"
        app:layout_constraintTop_toBottomOf="@+id/iv_app_logo" />
</androidx.constraintlayout.widget.ConstraintLayout>