<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondaryVariant"
    tools:context=".ui.articles.ArticleDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.contact.ContactActivity">

        <include
            android:id="@+id/app_bar_main"
            layout="@layout/app_bar_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cv_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_margin="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:checkable="true"
            android:clickable="true"
            android:focusable="true"
            app:cardBackgroundColor="?attr/colorSecondary"
            app:cardCornerRadius="10dp"
            app:cardElevation="55dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/app_bar_main">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/iv_logo_tertiary"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:importantForAccessibility="no"
                    android:scaleType="centerCrop"
                    android:src="@drawable/ic_contact_us_illustration" />

                <TextView
                    style="@style/TextContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginVertical="@dimen/activity_vertical_margin"
                    android:text="@string/advice_text"
                    android:textAlignment="center"
                    android:textColor="?attr/colorOnSecondary"
                    android:textSize="20sp" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etv_email"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/email_hint"
            app:helperText="Required*"
            app:helperTextTextColor="@color/red"
            app:layout_constraintEnd_toEndOf="@+id/cv_message"
            app:layout_constraintStart_toStartOf="@+id/cv_message"
            app:layout_constraintTop_toBottomOf="@+id/cv_message">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_email_edit"
                android:layout_width="match_parent"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etv_message"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/message_hint"
            app:layout_constraintEnd_toEndOf="@+id/etv_email"
            app:layout_constraintStart_toStartOf="@+id/etv_email"
            app:layout_constraintTop_toBottomOf="@id/etv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etv_message_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="6"
                android:overScrollMode="always"
                android:scrollbarStyle="insideInset"
                android:scrollbars="vertical"
                android:scrollHorizontally="false" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:text="@string/submit_text"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/etv_message"
            app:layout_constraintStart_toStartOf="@+id/etv_message"
            app:layout_constraintTop_toBottomOf="@+id/etv_message" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

